--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "morgan": "^1.10.1",
     "nodemon": "^3.1.10",
     "pdfkit": "^0.17.2",
+    "qrcode": "^1.5.4",
+    "uuid": "^13.0.0",
     "xlsx": "^0.18.5"
   }
 }
