--- a/.env.example
+++ b/.env.example
@@ -11,3 +11,7 @@ PORT=3000
 # 🔑 Configuraciones adicionales
 RECAPTCHA_SECRET_KEY=tu_secret_key_aqui
 JWT_SECRET=tu_jwt_secret_aqui
+
+# 📊 SharePoint - Encuesta de Egresados
+# URL de descarga directa del Excel en SharePoint
+SHAREPOINT_EXCEL_URL=https://sena4-my.sharepoint.com/personal/egresadosregcauca_sena_edu_co/_layouts/15/download.aspx?UniqueId=1f1d0616-d301-4e5d-9233-07b48dcc1d28
